--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "mui-react-alert": "^1.0.7",
     "react": "^18.2.0",
+    "react-alert-template-mui": "^1.0.7",
     "react-dom": "^18.2.0",
+    "react-popup-alert": "^2.0.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -37,6 +40,8 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.4.2"
+    "@mui/material": "^5.10.9",
+    "react-router-dom": "^6.4.2",
+    "reactjs-popup": "^2.0.5"
   }
 }
